salesforce_sfdx/main/default/objects/OSFMX_URL__c/OSFMX_URL__c.object-meta.xml
<CustomObject>
    <description>Contiene información relacionada a los reportes semanales de gas y electricidad.</description>
    <label>Reporte Semanal</label>
    <nameField>
        <label>Nombre de reporte</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reportes Semanales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>