salesforce_sfdx/main/default/objects/OSFMX_URL__c/fields/OSFMX_URL_PDF__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_URL_PDF__c</fullName>
    <label>URL PDF</label>
    <type>Url</type>
</CustomField>