salesforce_sfdx/main/default/objects/OSFMX_URL__c/fields/Suscrito__c.field-meta.xml
<CustomField>
    <fullName>Suscrito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suscrito</label>
    <type>Checkbox</type>
</CustomField>