salesforce_sfdx/main/default/objects/OSFMX_URL__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Enlace directo a los reportes</description>
    <inlineHelpText>URL de reportes semanales para gas y electricidad.</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>