salesforce_sfdx/main/default/objects/OSFMX_URL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>URL__c</columns>
    <columns>OSFMX_URL_PDF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>